# ChangeLog for x11-misc/notify-osd
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*notify-osd-0.9.27 ( 26 Apr 2010 )

  26 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +notify-osd-0.9.27.ebuild:
  new version

  19 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  notify-osd-0.9.23.ebuild:
  QA fix

  23 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> +metadata.xml:
  add metadata
