@@ -1,6 +1,8 @@
 DIST notify-osd-0.9.23.tar.gz 604469 RMD160 f793e91e5e35bc0428efbd767e3598ecd9eca96c SHA1 f8edc1ba9754b8aafc8f53225d2260a17321632e SHA256 8f151870ddb393f3df166b241d9dd2ffe20ce8d7897cfff9e97c8dcf669480d9
 DIST notify-osd-0.9.27.tar.gz 606892 RMD160 e50c5302372a324afc6d0f2885b3af14fa8bfdb5 SHA1 806a3f18a78a5aa9adf24f5396af093a6ad5d8d5 SHA256 4f4cdc3027807d026105cc2b21194ad10a53c90d745b37aa36c4887c7b50765d
+DIST notify-osd-0.9.29.tar.gz 607576 RMD160 2f7e92e9c23e48fed5dfdb233746ab7c2a3cd94d SHA1 795ecc42602b46390437c3787f3eb94f6fd562fc SHA256 7b8d79fc6dce7002fb3639ae7e9ad85e5f5063fbcc62fe27b80700142a0d7fd7
 EBUILD notify-osd-0.9.23.ebuild 766 RMD160 f90fe738bc10af69eca7a5bbbe7854becfc04f39 SHA1 33abb91581e48c5fc3421f92354d35b795c8a8b7 SHA256 f3aa877013be16811700a630dac7e34ec251447fee3adc81d45e9310a5f7dfd2
 EBUILD notify-osd-0.9.27.ebuild 737 RMD160 96b0bd0b7e9815ff366c1742b42a764ebfd3dcc1 SHA1 406b10705495566448abd4eac0171ec86acaa4b3 SHA256 13fce098339030b0c1352bc3f9e145b72fc67e39cebf1cce0ef162c1f030865e
-MISC ChangeLog 428 RMD160 4ea03fe7dd02427490e10c9d6fd93b17718715af SHA1 8d1c715e04bd344ad8bb78efccf602a377850ca9 SHA256 396b65540d6d9a6257906a90a56a3dd94393fa03cea3c6886ebdb030ac2e3109
+EBUILD notify-osd-0.9.29.ebuild 906 RMD160 f3435808ccb79d23507f917944f4cd8825bd7062 SHA1 86ad27ad4d76fccedcef7d7502d70f99ad80e228 SHA256 a8fa6c19c5debca9340b040e715be2d318c8d6de7e49352467fc608686bc9c47
+MISC ChangeLog 561 RMD160 6f22d70f86287ac0e01055c1c3f3e5d4ae417bc8 SHA1 3b8ed9d3c1d467c8f5ae94817b3fe942471364aa SHA256 6daa6542cce67b7afa819275998da9c52bfaaa40c100be01c7056f165cf224d9
 MISC metadata.xml 380 RMD160 46f9bfbb395d4cce437fabc30544e16a43c51642 SHA1 33e3d9109e0ae596083fe13e1131c2ad6fab18e3 SHA256 98e0077e584b123d7b92fd0a1cadca2a11832c04c8c4f96465eb425875ad68cf
