@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*notify-osd-0.9.29 ( 26 Apr 2010 )
+
+  26 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +notify-osd-0.9.29.ebuild:
+  new version
+
 *notify-osd-0.9.27 ( 26 Apr 2010 )
 
   26 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
